fixed location swipe down on mobile.

--- a/src/app/components/location/location.css
+++ b/src/app/components/location/location.css
@@ -1,5 +1,7 @@
 .location {
     position: relative;
+        height: 100%;
+    width: 100%;
 }
 
 .location #map {
@@ -7,10 +9,19 @@
     height: 100%;
     width: 100%;
     margin: auto;
+    z-index: 10;
+
 }
 
 .location a[title='Interactive JavaScript maps'] {
     display: none !important;
+}
+
+.location .cover {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 10000;
 }
 
 @media only screen and (min-width: 768px) {
